--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
         </div>
     </main>
     <script src="./js/app.js"></script>
+<!--<script src="./js/function.js"></script>-->
 </body>
 </html>
